--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ timezone:
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 #url: http://www.stevenlu.top/
 #root: /
-url: https://stevenhugo.github.io/2204.github.io/
-root: /2204.github.io
+url: https://stevenhugo.github.io/2204.github.io
+root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
