--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ timezone:
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 #url: http://www.stevenlu.top/
 #root: /
-url: https://www.piio.top
+url: https://www.piio.top/
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
