--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,8 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
+#url: http://www.stevenlu.top/
+#root: /
 url: http://www.piio.top/
 root: /
 permalink: :year/:month/:day/:title/
